--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>博客管理</title>
+  <title>Blog Management</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.css">
   <link rel="stylesheet" href="/css/me.css">
 </head>
@@ -13,10 +13,10 @@
   <nav class="ui inverted attached segment m-padded-tb-mini m-shadow-small" >
     <div class="ui container">
       <div class="ui inverted secondary stackable menu">
-        <h2 class="ui teal header item">管理后台</h2>
-        <a href="#" th:href="@{/admin/blogs}" class=" m-item item m-mobile-hide"><i class=" home icon"></i>博客</a>
-        <a href="#" th:href="@{/admin/types}" class=" m-item item m-mobile-hide"><i class=" idea icon"></i>分类</a>
-        <a href="#" th:href="@{/admin/tags}" class="m-item item m-mobile-hide"><i class=" tags icon"></i>标签</a>
+        <h2 class="ui teal header item">Management</h2>
+        <a href="#" th:href="@{/admin/blogs}" class=" m-item item m-mobile-hide"><i class=" home icon"></i>Blog</a>
+        <a href="#" th:href="@{/admin/types}" class=" m-item item m-mobile-hide"><i class=" idea icon"></i>Type</a>
+        <a href="#" th:href="@{/admin/tags}" class="m-item item m-mobile-hide"><i class=" tags icon"></i>Tag</a>
         <div class="right m-item m-mobile-hide menu">
           <div class="ui dropdown  item">
             <div class="text">
@@ -25,7 +25,7 @@
             </div>
             <i class="dropdown icon"></i>
             <div class="menu">
-              <a href="#" th:href="@{/admin/logout}" class="item">注销</a>
+              <a href="#" th:href="@{/admin/logout}" class="item">Logout</a>
             </div>
           </div>
         </div>
@@ -42,52 +42,16 @@
     <div class="ui container">
       <div class="ui success large  message">
         <h3>Hi,</h3>
-        <p>Allen，欢迎登录！</p>
+        <p>Allen，welcome!</p>
       </div>
 
-      <img src="https://unsplash.it/1000/400?image=1005" alt="" class="ui rounded bordered fluid image">
+      <img src="/images/welcome.jpg" alt="" class="ui rounded bordered fluid image">
     </div>
   </div>
 
   <br>
   <br>
 
-  <!--底部footer-->
-  <footer class="ui inverted vertical segment m-padded-tb-massive">
-    <div class="ui center aligned container">
-      <div class="ui inverted divided stackable grid">
-        <div class="three wide column">
-          <div class="ui inverted link list">
-            <div class="item">
-              <img src="/images/wechat.jpg" class="ui rounded image" alt="" style="width: 110px">
-            </div>
-          </div>
-        </div>
-        <div class="three wide column">
-          <h4 class="ui inverted header m-text-thin m-text-spaced " >最新博客</h4>
-          <div class="ui inverted link list">
-            <a href="#" class="item m-text-thin">用户故事（User Story）</a>
-            <a href="#" class="item m-text-thin">用户故事（User Story）</a>
-            <a href="#" class="item m-text-thin">用户故事（User Story）</a>
-          </div>
-        </div>
-        <div class="three wide column">
-          <h4 class="ui inverted header m-text-thin m-text-spaced ">联系我</h4>
-          <div class="ui inverted link list">
-            <a href="#" class="item m-text-thin">Email：lirenmi@163.com</a>
-            <a href="#" class="item m-text-thin">QQ：865729312</a>
-          </div>
-        </div>
-        <div class="seven wide column">
-          <h4 class="ui inverted header m-text-thin m-text-spaced ">Blog</h4>
-          <p class="m-text-thin m-text-spaced m-opacity-mini">这是我的个人博客、会分享关于编程、写作、思考相关的任何内容，希望可以给来到这儿的人有所帮助...</p>
-        </div>
-      </div>
-      <div class="ui inverted section divider"></div>
-      <p class="m-text-thin m-text-spaced m-opacity-tiny">Copyright © 2016 - 2017 Allen Designed by Allen</p>
-    </div>
-
-  </footer>
 
 
   <script src="/js/jquery-1.11.0.min.js"></script>
