--- a/src/main/resources/templates/admin/login.html
+++ b/src/main/resources/templates/admin/login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>博客管理登录</title>
+  <title>Login</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.css">
   <link rel="stylesheet" href="/css/me.css">
 </head>
@@ -18,7 +18,7 @@
        <div class="column">
          <h2 class="ui teal image header">
            <div class="content">
-             管理后台登录
+             Login
            </div>
          </h2>
          <form class="ui large form" method="post" action="#" th:action="@{/admin/login}">
@@ -26,20 +26,20 @@
              <div class="field">
                <div class="ui left icon input">
                  <i class="user icon"></i>
-                 <input type="text" name="username" placeholder="用户名">
+                 <input type="text" name="username" placeholder="username">
                </div>
              </div>
              <div class="field">
                <div class="ui left icon input">
                  <i class="lock icon"></i>
-                 <input type="password" name="password" placeholder="密码">
+                 <input type="password" name="password" placeholder="password">
                </div>
              </div>
-             <button class="ui fluid large teal submit button">登   录</button>
+             <button class="ui fluid large teal submit button">Login</button>
            </div>
 
            <div class="ui error mini message"></div>
-           <div class="ui mini negative message" th:unless="${#strings.isEmpty(message)}" th:text="${message}">用户名和密码错误</div>
+           <div class="ui mini negative message" th:unless="${#strings.isEmpty(message)}" th:text="${message}">Username or password is wrong.</div>
 
          </form>
 
@@ -60,14 +60,14 @@
         identifier: 'username',
         rules: [{
           type : 'empty',
-          prompt: '请输入用户名'
+          prompt: 'Please input your username.'
         }]
       },
       password : {
         identifier: 'password',
         rules: [{
           type : 'empty',
-          prompt: '请输入密码'
+          prompt: 'Please input your password.'
         }]
       }
     }
