--- a/src/main/resources/templates/types.html
+++ b/src/main/resources/templates/types.html
@@ -110,42 +110,42 @@
 
   <br>
   <br>
-  <!--底部footer-->
-  <footer class="ui inverted vertical segment m-padded-tb-massive">
-    <div class="ui center aligned container">
-      <div class="ui inverted divided stackable grid">
-        <div class="three wide column">
-          <div class="ui inverted link list">
-            <div class="item">
-              <img src="/images/wechat.jpg" class="ui rounded image" alt="" style="width: 110px">
-            </div>
+<!--底部footer-->
+<footer class="ui inverted vertical segment m-padded-tb-massive">
+  <div class="ui center aligned container">
+    <div class="ui inverted divided stackable grid">
+      <div class="three wide column">
+        <div class="ui inverted link list">
+          <div class="item">
+            <img src="/images/wechat.jpg" th:src="@{/images/wechat.jpg}"  class="ui rounded image" alt="" style="width: 110px">
           </div>
-        </div>
-        <div class="three wide column">
-          <h4 class="ui inverted header m-text-thin m-text-spaced " >最新博客</h4>
-          <div class="ui inverted link list">
-            <a href="#" class="item m-text-thin">用户故事（User Story）</a>
-            <a href="#" class="item m-text-thin">用户故事（User Story）</a>
-            <a href="#" class="item m-text-thin">用户故事（User Story）</a>
-          </div>
-        </div>
-        <div class="three wide column">
-          <h4 class="ui inverted header m-text-thin m-text-spaced ">联系我</h4>
-          <div class="ui inverted link list">
-            <a href="#" class="item m-text-thin">Email：lirenmi@163.com</a>
-            <a href="#" class="item m-text-thin">QQ：865729312</a>
-          </div>
-        </div>
-        <div class="seven wide column">
-          <h4 class="ui inverted header m-text-thin m-text-spaced ">Blog</h4>
-          <p class="m-text-thin m-text-spaced m-opacity-mini">这是我的个人博客、会分享关于编程、写作、思考相关的任何内容，希望可以给来到这儿的人有所帮助...</p>
         </div>
       </div>
-      <div class="ui inverted section divider"></div>
-      <p class="m-text-thin m-text-spaced m-opacity-tiny">Copyright © 2016 - 2017 Lirenmi Designed by Lirenmi</p>
+      <div class="three wide column">
+        <h4 class="ui inverted header m-text-thin m-text-spaced " >Newest Blogs</h4>
+        <div class="ui inverted link list">
+          <a href="#" class="item m-text-thin">User Story</a>
+          <a href="#" class="item m-text-thin">User Story</a>
+          <a href="#" class="item m-text-thin">User Story</a>
+        </div>
+      </div>
+      <div class="three wide column">
+        <h4 class="ui inverted header m-text-thin m-text-spaced ">Contact Me</h4>
+        <div class="ui inverted link list">
+          <a href="#" class="item m-text-thin">Email：445970779@qq.com</a>
+          <a href="#" class="item m-text-thin">QQ：445970779</a>
+        </div>
+      </div>
+      <div class="seven wide column">
+        <h4 class="ui inverted header m-text-thin m-text-spaced ">Blog</h4>
+        <p class="m-text-thin m-text-spaced m-opacity-mini">This is my blog, I will share some blogs about programming, writing, thinking. Hope it will help you...</p>
+      </div>
     </div>
+    <div class="ui inverted section divider"></div>
+    <p class="m-text-thin m-text-spaced m-opacity-tiny">Copyright © 2018 - 2019 Allen</p>
+  </div>
 
-  </footer>
+</footer>
 
   <script src="/js/jquery-1.11.0.min.js"></script>
   <script src="/js/semantic.min.js"></script>
